# poker

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  IMPROVEMENTS.md  README.md  amplify.yml  build.sh  vcpkg.json
.github/workflows/: ci.yml  deploy-amplify-website.yml
app/: CMakeLists.txt  main.cpp
app/poker/: CMakeLists.txt  cards.cpp  game.hpp  player.cpp
cmake/: GitVersion.cmake  version.h.in
docs/: architecture.md  building.md  ci.md  commercial-cleanup-plan.md  game-in-code.md  github-actions-aws-amplify.md  mvp-trainer-roadmap.md  next-steps.md  rules-and-limitations.md  sqlite-parquet-python.md
image_reader/: CMakeLists.txt  image_reader.cpp
infra/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: amplify-hosting-stack.ts  download-assets-stack.ts
infra/scripts/: bootstrap.sh  deploy-all.sh  deploy-amplify.sh  deploy-downloads.sh  synth.sh
poker/: CMakeLists.txt  main.cpp
poker/packaging/: README.md
poker/packaging/linux/: README.md  build-appimage.sh  build-snap.sh  bundle-poker-app.inc.sh  install-local.sh  install-rootfs.sh  io.github.texasholdemgym.metainfo.xml.in  texas-holdem-gym.desktop
poker/packaging/linux/flatpak/: io.github.texasholdemgym.yaml
poker/packaging/macos/: README.md  build-release.sh  entitlements.plist  sign-notarize-release.sh
poker/packaging/windows/: README.md  TexasHoldemGym.iss  build-installer.ps1  build-release.cmd  build-release.ps1
poker/poker/: CMakeLists.txt  bankroll_tracker.cpp  bankroll_tracker.hpp  bot.cpp  bot.hpp  cards.cpp  cards.hpp  equity_engine.cpp  equity_engine.hpp  game.cpp  game.hpp  game_payouts.cpp  game_persistence.cpp  game_persistence.hpp  game_ui_sync.cpp  hand_eval.cpp  hand_eval.hpp  hand_history_query.cpp  hand_history_query.hpp  hand_log_store.cpp  hand_log_store.hpp  holdem_rules_facade.hpp  holdem_side_pot.cpp  holdem_side_pot.hpp  human_decision_controller.cpp  human_decision_controller.hpp  persist_sqlite.cpp  persist_sqlite.hpp  player.cpp  player.hpp  poker.hpp  poker_solver.cpp  poker_solver.hpp  range_matrix.cpp  range_matrix.hpp  seat_manager.cpp  seat_manager.hpp  session_store.cpp  session_store.hpp  toy_nash_solver.cpp  (+6 more)
poker/poker/tests/: CMakeLists.txt  test.cpp  test_bot_decisions.cpp  test_equity_engine.cpp  test_hand_evaluation.cpp  test_hand_history.cpp  test_hand_log_store.cpp  test_main.cpp  test_persistence_sqlite.cpp  test_range_matrix.cpp  test_side_pots.cpp  test_smoke_cards_deck_player.cpp  test_smoke_game_engine.cpp  test_training_store.cpp
poker/qml/: BrandedBackground.qml  Card.qml  FlopTrainer.qml  Game.qml  GameControls.qml  HudButton.qml  Lobby.qml  Main.qml  Player.qml  PokerTableBackground.qml  PreflopTrainer.qml  RangeGrid.qml  SetupScreen.qml  SizingPresetBar.qml  SolverScreen.qml  StatsScreen.qml  Table.qml  TableBoardCard.qml  TableFelt.qml  ThemedCheckBox.qml  ThemedSwitch.qml  TrainerHome.qml  application.qrc
poker/qml/PokerUi/: qmldir
poker/qml/Theme/: Theme.qml
poker/qml/assets/cards_svgs/: get_cards_svgs.sh
poker/qml/assets/training/: preflop_ranges_v1.json
poker/qml/components/: BrandedBackground.qml  Card.qml  GameButton.qml  GameControls.qml  Player.qml  RangeGrid.qml  ResetButton.qml  SizingPresetBar.qml  Table.qml  TableBoardCard.qml  TableFelt.qml  ThemedPanel.qml
poker/qml/screens/: FlopTrainer.qml  GameScreen.qml  HandHistoryScreen.qml  LobbyScreen.qml  PreflopTrainer.qml  RangeViewer.qml  RiverTrainer.qml  SetupScreen.qml  SolverScreen.qml  StatsScreen.qml  TrainerHome.qml  TurnTrainer.qml
poker/qml/theme/: Fonts.qml  Metrics.qml
poker_solver/: CMakeLists.txt  main.cpp
poker_solver/poker/: CMakeLists.txt  game.cpp  game.hpp  player.hpp  utils.hpp
poker_solver/poker/tests/: CMakeLists.txt  test.cpp
poker_solver/qml/: About.qml  Card.qml  Dashboard.qml  Game.qml  GameControls.qml  Main.qml  Player.qml  PlayerSpot.qml  Seat.qml  Table.qml  application.qrc
poker_solver/simulator/: CMakeLists.txt  poker_simulator.hpp  simulator.cpp  simulator.hpp
poker_solver/simulator/tests/: CMakeLists.txt
snap/: snapcraft.yaml
src/app/: CMakeLists.txt  Main.qml  main.cpp  mainwindow.ui
src/app/poker/: CMakeLists.txt  cards.cpp  cards.hpp  game.cpp  game.hpp  player.cpp  player.hpp  poker.hpp  utils.hpp
src/app/poker/tests/: CMakeLists.txt  test.cpp
src/app/qml/: About.qml  Dashboard.qml  Main.qml
src/app/simulator/: CMakeLists.txt  simulator.hpp  storage.cpp  storage.hpp
src/app/simulator/tests/: CMakeLists.txt  test.cpp
src/image_reader/: CMakeLists.txt  image_reader.cpp  image_reader.h
website/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
website/prisma/: schema.prisma
website/src/: middleware.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/admin/: AdminDashboard.tsx  layout.tsx
website/src/app/admin/login/: page.tsx
website/src/app/api/admin/login/: route.ts
website/src/app/api/admin/logout/: route.ts
website/src/app/api/admin/purchases/: route.ts
website/src/app/api/admin/refund/: route.ts
website/src/app/api/admin/stats/: route.ts
website/src/app/api/admin/stripe-config/: route.ts
website/src/app/api/analytics/track/: route.ts
website/src/app/api/checkout/: route.ts
website/src/app/api/stripe/webhook/: route.ts
website/src/app/buy/: page.tsx
website/src/app/contact/: page.tsx
website/src/app/download/: page.tsx
website/src/app/features/: page.tsx
website/src/app/pricing/: page.tsx
website/src/app/privacy/: page.tsx
website/src/app/success/: page.tsx
website/src/app/terms/: page.tsx
website/src/components/: AnalyticsTracker.tsx  BuyButton.tsx  Footer.tsx  Nav.tsx  PlatformIcons.tsx  SiteChrome.tsx
website/src/lib/: admin-api.ts  admin-auth.ts  downloads.ts  email.ts  prisma.ts  stripe.ts
